fixed the games container that displays all the games, for round that show less than three games, the games will now be centered instead of aligned left which created too much white space

--- a/src/index.scss
+++ b/src/index.scss
@@ -256,6 +256,7 @@ body {
         flex-wrap: wrap;
         gap: .5em;
         height: 100%;
+        width: 100%;
 
         div {
           display: flex;
